4_ingress/K8sDeploymentScripts/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testwebapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testwebapp
    spec:
      containers:
        - name: testwebapp
          image: docker.io/mcywka/testwebapplication:version-0.4.10
          ports:
            - containerPort: 80
          volumeMounts: # 3
            - name: sqlite-volume # 3.a
              mountPath: /usr/db # 3.b
      volumes:
        - name: sqlite-volume # 2
          persistentVolumeClaim:
            claimName: azure-file # 1
