4_ingress/K8sDeploymentScripts/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: testwebapp-service-cluster
spec:
  selector:
    app: testwebapp
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
