4_ingress/K8sDeploymentScripts/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.mshome.net
    http:
      paths:
      - path: /test
        backend:
          serviceName: echoserver
          servicePort: 8080
