4_ingress/K8sDeploymentScripts/ingress_aks.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: test.51.137.0.7.nip.io #IMPORTANT! update this to ip of your loadbalancer ingress controller service
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: ingress-demo
          servicePort: 80
        path: /hello-world-two(/|$)(.*)
      - backend:
          serviceName: testwebapp-service-cluster
          servicePort: 80
        path: /testwebapp(/|$)(.*)
